[package]
name = "vortex-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Control plane Unix socket API for Vortex"

[dependencies]
prost = "0.13"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = "0.12"
vortex-core = { path = "../vortex-core" }

[lints]
workspace = true

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
