[package]
name = "vortex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core domain logic and routing models for Vortex"

[dependencies]
arc-swap = "1.6"

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1.0", features = ["rt", "macros", "time"] }

[lints]
workspace = true
